feat(fuzzy-search): add fuzzy search
