# src/dto/models/ProductSearchResult.ts
@@ -4,22 +4,29 @@
 /* eslint-disable */
 
 export type ProductSearchResult = {
+    id?: string;
     ref?: string;
     ean?: string;
-    container_units?: number;
-    container_type?: string;
     supplier_id?: string;
     supplier_name?: string;
-    step?: number;
     description?: string;
-    short_description?: string;
+    container_units?: string;
+    container_type?: string;
+    step?: number;
     main_picture_url?: string;
     main_picture_thumb_url?: string;
     level1?: string;
     level2?: string;
     level3?: string;
+    short_description?: string;
     level1Name?: string;
     level2Name?: string;
     level3Name?: string;
+    discount1?: number;
+    discount2?: number;
+    net_price?: number;
+    sale_price?: number;
+    net_price_with_margin?: number;
+    vat_amount?: number;
 };
 
