# src/search/search.controller.ts
@@ -1,8 +1,8 @@
-import { Controller, Get, Query, Post, Body, Req, HttpCode } from '@nestjs/common';
+import { Controller, Get, Query, Req, HttpCode } from '@nestjs/common';
 import { ApiQuery, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { SearchService } from './search.service';
+import { GetCategoriesTreeResponse, ProductSearchResponse } from '../dto';
 import { Request } from 'express';
-import { GetCategoriesTreeRequest, GetCategoriesTreeResponse } from '../dto';
 
 @ApiTags('Search')
 @Controller('search')
@@ -13,52 +13,67 @@ export class SearchController {
   @ApiQuery({ name: 'q', required: false })
   @ApiQuery({ name: 'lang', required: false, enum: ['ca','en','es','fr','gl','pt'] })
   @ApiQuery({ name: 'page', type: Number, required: false, description: 'Page number', example: 1 })
-  @ApiQuery({ name: 'limit', type: Number, required: false, description: 'Results per page', example: 10 })
-  @ApiQuery({ name: 'supplier_id', type: String, required: false, description: 'Supplier Id', example: '' })
-  @ApiQuery({ name: 'ref', type: String, required: false, description: 'Product ref', example: '462' })
-  @ApiQuery({ name: 'ean', type: String, required: false, description: 'Product ean', example: '3253561801174' })
+  @ApiQuery({ name: 'size', type: Number, required: false, description: 'Results per page', example: 10 })
+  @ApiQuery({ name: 'supplierId', type: String, required: false, description: 'Supplier Id', example: '' })
+  @ApiQuery({ name: 'ref', type: String, required: false, description: 'Comma separated  product refs', example: '462' })
+  @ApiQuery({ name: 'ean', type: String, required: false, description: 'Comma separated product eans', example: '3253561801174' })
   @ApiQuery({ name: 'level1Id', type: String, required: false, description: 'Level1 cat Id', example: '06' })
   @ApiQuery({ name: 'level2Id', type: String, required: false, description: 'Level2 cat Id', example: '0604' })
   @ApiQuery({ name: 'level3Id', type: String, required: false, description: 'Level3 cat Id', example: '060406' })
+  @ApiQuery({ name: 'id', type: String, required: false, description: 'Comma separated product ids', example: '"060406","AS234"' })
   @ApiQuery({ name: 'visibility', type: Number, required: false, description: 'Client visibility', example: 0 })
+  @ApiQuery({ name: 'sortBy', type: String, required: false, description: 'Sort by field', example: "price+" })
   @ApiResponse({ status: 200, description: 'Array of products' })
   async search(
     @Req() req: Request, 
-    @Query('q') q?: string, @Query('lang') lang?: string, 
-    @Query('supplier_id') supplier_id?: string,
+    @Query('q') q?: string, 
+    @Query('lang') lang: string = "es", 
+    @Query('supplierId') supplierId?: string,
     @Query('ref') ref?: string,
     @Query('ean') ean?: string,
     @Query('level1Id') level1Id?: string,
     @Query('level2Id') level2Id?: string,
     @Query('level3Id') level3Id?: string,
+    @Query('id') id?: string,
     @Query('visibility') visibility: number = 0,
     @Query('page') page: number = 1,
-    @Query('limit') limit: number = 12) {
+    @Query('size') size: number = 12,
+    @Query('sortBy') sortBy?: string): Promise<ProductSearchResponse> {
 
       if (!page) {
-        page = 1;
+        page = 0;
       }
 
-      if (!limit) {
-        limit = 12;
+    
+      if (!size) {
+        size = 1000;
       }
 
-    const response = await this.searchService.search(q || '', lang || 'es', page, limit, {
-      supplier_id, ref, ean, level1Id, level2Id, level3Id, visibility
-    });
+      if (lang) {
+        lang = lang.toLowerCase();
+      }
+
+    console.log("=====> ", "(" + sortBy + ")");
+
+    const response = await this.searchService.search(q || '', lang || 'es', page, size, {
+      supplierId, ref, ean, level1Id, level2Id, level3Id, visibility, id
+    }, sortBy);
 
     const baseUrl = `${req.protocol}://${req.get('host')}${req.baseUrl}${req.path}`;
-    const lastPage = Math.max(1, Math.ceil(response.navigation.total / limit));
+    const lastPage = response?.navigation?.total ? Math.max(1, Math.ceil(response?.navigation?.total / size)):0;
 
     const buildUrl = (p: number) =>
-      `${baseUrl}?query=${encodeURIComponent(q)}&lang=${encodeURIComponent(lang)}&page=${p}&limit=${limit}` 
-      + (supplier_id?"&supplier_id=" + supplier_id:"")
-      + (ref?"&ref=" + ref:"")
-      + (ean?"&ean=" + ean:"")
-      + (level1Id?"&level1Id=" + level1Id:"")
-      + (level2Id?"&level2Id=" + level2Id:"")
-      + (level3Id?"&level3Id=" + level3Id:"")
-      + (visibility?"&visibility=" + visibility:"");
+      `${baseUrl}?lang=${encodeURIComponent(lang)}&page=${p}&size=${size}` 
+      + (q?`query=${encodeURIComponent(q)}`:"")
+      + (supplierId?`&supplierId=${supplierId}`:"")
+      + (ref?`&ref=${ref}`:"")
+      + (ean?`&ean=${ean}`:"")
+      + (level1Id?`&level1Id=${level1Id}`:"")
+      + (level2Id?`&level2Id=${level2Id}`:"")
+      + (level3Id?`&level3Id=${level3Id}`:"")
+      + (id?`&id=${id}`:"")
+      + (visibility?`&visibility=${visibility}`:"")
+      + (sortBy?`&sortBy=${sortBy}`:"");
 
 
     response.navigation = {
@@ -76,9 +91,9 @@ export class SearchController {
   @ApiQuery({ name: 'tenantId', required: true })
   @ApiQuery({ name: 'lang', required: false, enum: ['ca','en','es','fr','gl','pt'] })
   @ApiQuery({ name: 'supplierIds', type: String, required: false, description: 'Supplier Ids', example: '' })
-  @ApiQuery({ name: 'level1Id', type: String, required: false, description: 'Level1 cat Id', example: '06' })
-  @ApiQuery({ name: 'level2Id', type: String, required: false, description: 'Level2 cat Id', example: '0604' })
-  @ApiQuery({ name: 'level3Id', type: String, required: false, description: 'Level3 cat Id', example: '060406' })
+  @ApiQuery({ name: 'l1Id', type: String, required: false, description: 'Level1 cat Id', example: '06' })
+  @ApiQuery({ name: 'l2Id', type: String, required: false, description: 'Level2 cat Id', example: '0604' })
+  @ApiQuery({ name: 'l3Id', type: String, required: false, description: 'Level3 cat Id', example: '060406' })
   @ApiQuery({ name: 'visibility', type: Number, required: false, description: 'Client visibility', example: 0 })
   @HttpCode(200)
   async getCategoriesTree(
@@ -86,9 +101,9 @@ export class SearchController {
     @Query('tenantId') tenantId: string,
     @Query('lang') lang?: string,
     @Query('supplierIds') supplierIds?: string[],
-    @Query('level1Id') level1Id?: string,
-    @Query('level2Id') level2Id?: string,
-    @Query('level3Id') level3Id?: string,
+    @Query('lId') level1Id?: string,
+    @Query('l2Id') level2Id?: string,
+    @Query('l3Id') level3Id?: string,
     @Query('visibility') visibility: number = 0,
   ): Promise<GetCategoriesTreeResponse> {
     
